--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/_CustomerFormsList.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/_CustomerFormsList.cshtml
@@ -5,7 +5,7 @@
     <table class="table table-striped table-bordered table-hover">
         <thead>
             <tr>
-                <td>@Translation.Get("Namn")</td>
+                <th>@Translation.Get("Namn")</th>
             </tr>
         </thead>
         <tbody id="extendedCaseFormsLst">
