--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
@@ -113,6 +113,7 @@
 
     const defaultLanguageId = @Model.FieldTranslations.Where(l => l.IsDefaultLanguage).FirstOrDefault().Language.Id;
     const currentLanguageId = @SessionFacade.CurrentLanguageId;
+    const droppedItemClass = "dropped-item";
 
     $(document).ready(function () {
         var translations = {}
@@ -142,9 +143,9 @@
         }
 
         let sectionHtmlDiv = (editFieldHtml, idName, labelClass, labelName) => "<div class='field'><div class='header'>" + divHeaderLabel(labelClass, labelName, idName) + divHeaderActions(idName) + "</div><br/>" + editFieldHtml + "</div>";
-        let sectionHtml = () => "<li data-type='section' class='ui-draggable' style='display: list-item'>" + sectionHtmlDiv(editFieldHtml(IDNAME, '@Translation.GetCoreTextTranslation("Sektion")', true, false, false), IDNAME, "field-label sectionLabel", '@Translation.GetCoreTextTranslation("Sektion")') + "</li>";
+        let sectionHtml = () => "<li data-type='section' class='ui-draggable dropped-item' style='display: list-item'>" + sectionHtmlDiv(editFieldHtml(IDNAME, '@Translation.GetCoreTextTranslation("Sektion")', true, false, false), IDNAME, "field-label sectionLabel", '@Translation.GetCoreTextTranslation("Sektion")') + "</li>";
 
-        let listHtml = (dataType, controlDiv) => "<li data-type='" + dataType + "' class='ui-draggable' style='display: list-item'>" + controlDiv + "</li>";
+        let listHtml = (dataType, controlDiv) => "<li data-type='" + dataType + "' class='ui-draggable dropped-item' style='display: list-item'>" + controlDiv + "</li>";
         let summerNoteConfig = (idName, data) => "<div id='" + idName + "_summernote'>" + data + "</div><script>$('#" + idName + "_summernote').summernote({placeholder: '', dialogsFade: true, tabsize: 2, height: 170}); <" + "/script>"
 
         var draggedFrom = "";
@@ -156,7 +157,7 @@
         $("#source li").draggable({
             connectToSortable: "#dropzone", helper: "clone", revert: 'invalid',
             start: function (e, ui) {
-              $(ui.helper).css('width', "10%");
+                $(ui.helper).css('width', "10%");
                     draggedItem = ui.item;
                     draggedFrom = $(this).closest(".dragndrop").attr("id");
                 },
@@ -169,6 +170,7 @@
         $("#dropzone").sortable({
             revert: true,
             receive: function (event, ui) {
+                draggedItem.switchClass("extendedCaseFormsLst", droppedItemClass);
                 let idName = createUUID();
                 if (draggedFrom == "fields") {
                     switch (draggedItem.data('type')) {
@@ -323,14 +325,34 @@
                 $('#dropzone').sortable("disable")
         }).on('mouseleave', '.note-editable', function () {
             $('#dropzone').sortable("enable")
-            });
+        });
 
         $(function () {
             $('#btnSubmit').click(function (e) {
-                 if (document.getElementById("dropzone").firstElementChild == null) {
+                if (document.getElementById("dropzone").firstElementChild == null) {
                     ShowToastMessage('@Html.Raw(Translation.GetForJS(Translation.Get("Formuläret får ej vara tomt", Enums.TranslationSource.TextTranslation)))', "error")
                     return;
                 }
+
+                var emptySections = 0;
+                var droppedItemElements = $("." + droppedItemClass);
+                for (var i = 0; i < droppedItemElements.length; i++) {
+                    var element = droppedItemElements.eq(i);
+                    var nextElement = droppedItemElements.eq(i + 1);
+
+                    if (element.attr("data-type") == 'section' && nextElement.length == 0) {
+                        emptySections = emptySections + 1;
+                    }
+                    else if (element.attr("data-type") == 'section' && nextElement.attr("data-type") == 'section') {
+                        emptySections = emptySections + 1;
+                    }
+                }
+
+                if (emptySections > 0) {
+                    ShowToastMessage('@Html.Raw(Translation.GetForJS(Translation.Get("En sektion får ej vara tom", Enums.TranslationSource.TextTranslation)))', "error")
+                    return;
+                }
+
 
                 if (document.getElementById("dropzone").firstElementChild.getAttribute('data-type') != "section") {
                     ShowToastMessage('@Html.Raw(Translation.GetForJS(Translation.Get("Formulärets första fält måste vara en sektion", Enums.TranslationSource.TextTranslation)))', "error")
@@ -463,7 +485,7 @@
                     if (document.getElementById(id.replace('header', '_summernote')) != null) {
                         contentSummerNote = $('#' + id.replace('header', '_summernote')).summernote('code');
                     }
-                     
+
                     var label = document.getElementById(id.replace('header', 'headerName')) != null ? document.getElementById(id.replace('header', 'headerName')).innerText : "infoField";
 
                     var required = document.getElementById(id.replace('header', 'required')) ? document.getElementById(id.replace('header', 'required')).checked : false;
