--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
@@ -23,7 +23,7 @@
             if (TempData["LoginFailed"] != null)
             {
                 <div class="alert alert-error">
-                    @TempData["LoginFailed"]; 
+                    @TempData["LoginFailed"];
                 </div>
             }
             @(Translation.Get("Username") + ":")<br />
@@ -32,20 +32,24 @@
             @(Translation.Get("Password") + ":")<br />
             <input type="password" maxlength="50" name="txtPwd" id="txtPwd" class="input-block-level" placeholder="Password" />
             <!--
-                @Translation.Get("Logga in med"):<br />
-                <select name="checkInWith" id="checkInWith" class="input-block-level">
-                    <option value="0">@Translation.Get("Lokalt konto")</option>
-                    <option value="1">@Translation.Get("Nätverkskonto")</option>
-                </select>
-                -->
+        @Translation.Get("Logga in med"):<br />
+        <select name="checkInWith" id="checkInWith" class="input-block-level">
+            <option value="0">@Translation.Get("Lokalt konto")</option>
+            <option value="1">@Translation.Get("Nätverkskonto")</option>
+        </select>
+        -->
             <br />
-            <input type="hidden" id="timeZoneOffsetInJan1" name="timeZoneOffsetInJan1"/>
-            <input type="hidden" id="timeZoneOffsetInJul1" name="timeZoneOffsetInJul1"/>
+            <input type="hidden" id="timeZoneOffsetInJan1" name="timeZoneOffsetInJan1" />
+            <input type="hidden" id="timeZoneOffsetInJul1" name="timeZoneOffsetInJul1" />
             <input type="submit" value="Login" name="btnLogin" id="btnLogin" class="btn btn-large btn-success" style="width:100%;" />
             @*<input type="button" value="Get Access Token" name="btnAccessToken" id="btnAccessToken" class="btn btn-large btn-danger" style="width:100%;" />
             <input type="button" value="Get New Access Token" name="btnRefreshToken" id="btnRefreshToken" class="btn btn-large btn-danger" style="width:100%;" />
             <input type="button" value="Get Case" name="btnGetCase" id="btnGetCase" class="btn btn-large btn-warning" style="width:100%;" />
             <input type="button" value="Save Case" name="btnSaveCase" id="btnSaveCase" class="btn btn-large btn-warning" style="width:100%;" />*@
+        }
+        @using (Html.BeginForm("LoginMicrosoft", "Login", null, FormMethod.Post, new { id = "frmLogin", name = "frmLogin" }))
+        {
+            <input type="submit" value="Login with Microsoft" name="btnLogin" id="btnLogin" class="btn btn-large btn-success" style="width:100%;" />
         }
     </div>
     <div class="signin-bottom">
