--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -127,7 +127,7 @@
             $("#case-action-close").click(function(e) {
                     e.preventDefault();
 
-                $('#ButtonClick').val('save');
+                    $('#ButtonClick').val('save');
 
                     var targetUrl = $(this).attr("href");
                     UnLockCase('@Model.CaseLock.LockGUID', targetUrl);
@@ -414,5 +414,21 @@
                 @Html.Partial("_ParentCases", Model.ConnectToParentModel)
             </div>
         }
+        <div id="caseLockedWarning" role="dialog" class="modal fade" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h5>@Translation.GetCoreTextTranslation("Låst")</h5>
+                    </div>
+                    <div class="modal-body">
+                        @Translation.GetCoreTextTranslation("Nätverksförbindelsen bröts. Användare <name> har låst ärendet.")
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn ok">@Translation.GetCoreTextTranslation("Ok")</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     }
 </div>
